@@ -1,3 +1,9 @@
+2021-05-29  Werner Lemberg  <wl@gnu.org>
+
+	[build] Allow overriding of `ANSIFLAGS` for GNU make build.
+
+	* builds/*: Implement it.
+
 2021-05-27  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[type42] Fix auto-hinting.
